--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "react-switch": "^7.1.0",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.15",
     "web-vitals": "^2.1.4"
   },
